# Health-App-Backend-firebase-studio

./: .env  app_user_view_permissions.json  doctor_features.md  documentation.md  patient_features.md  pyproject.toml  requirements.txt  run_tests.sh  scheduled_managmenet.md  soap_notes.md
mediconnect_backend/: .env  requirements.txt
mediconnect_backend/app/: cleanup.py  db_config.py  main.py  reminders.py
mediconnect_backend/app/api/: deps.py
mediconnect_backend/app/core/: config.py  security.py
mediconnect_backend/app/crud/: __init__.py  base.py  consultation.py  crud_ai.py  crud_allergy.py  crud_appointment.py  crud_base.py  crud_calorie.py  crud_consultation.py  crud_doctor.py  crud_doctor_verification_document.py  crud_hospital.py  crud_medical_condition.py  crud_medication.py  crud_medicine.py  crud_notification.py  crud_patient.py  crud_permission.py  crud_permissions.py  crud_review.py  crud_role.py  crud_soap_note.py  crud_subscription.py  crud_symptom.py  crud_transaction.py  crud_user.py  crud_vital.py
mediconnect_backend/app/db/: base.py  init_db.py  session.py
mediconnect_backend/app/models/: __init__.py  ai.py  allergy.py  appointment.py  calorie.py  consultation.py  doctor.py  hospital.py  medical_condition.py  medication.py  notification.py  patient.py  permission.py  review.py  role.py  schedule.py  subscription.py  symptom.py  (+3 more)
mediconnect_backend/tests/: conftest.py  test_admin.py  test_appointments.py  test_consultations.py  test_doctors.py  test_login.py  test_users.py
myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+59 files in other folders)
