[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
    "google-generativeai",
    "python-dotenv",
    "fastapi-limiter",
    "apscheduler",
    "sqlalchemy",
    "pydantic-settings",
    "asyncpg",
    "python-multipart>=0.0.21",
    "google-genai>=1.56.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
